--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="687592">  <td>18/10/15 11:46:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01001()[pri:0, instance:com.Home.Associate_Login@13deb50e]">TCBA01001</td> 
+<tr bgcolor="687592">  <td>18/10/15 12:47:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01001()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01001</td> 
   <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 11:46:52</td>   <td>949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01002()[pri:0, instance:com.Home.Associate_Login@13deb50e]">TCBA01002</td> 
+<tr bgcolor="687592">  <td>18/10/15 12:47:28</td>   <td>817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01002()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01002</td> 
   <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 11:46:53</td>   <td>1443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01003()[pri:0, instance:com.Home.Associate_Login@13deb50e]">TCBA01003</td> 
+<tr bgcolor="687592">  <td>18/10/15 12:47:28</td>   <td>1286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01003()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01003</td> 
   <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 11:46:53</td>   <td>1893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01004()[pri:0, instance:com.Home.Associate_Login@13deb50e]">TCBA01004</td> 
+<tr bgcolor="687592">  <td>18/10/15 12:47:29</td>   <td>1802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01004()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01004</td> 
   <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 11:46:56</td>   <td>4357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01005()[pri:0, instance:com.Home.Associate_Login@13deb50e]">TCBA01005</td> 
+<tr bgcolor="687592">  <td>18/10/15 12:47:31</td>   <td>4287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01005()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01005</td> 
   <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 11:46:59</td>   <td>7852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01006()[pri:0, instance:com.Home.Associate_Login@13deb50e]">TCBA01006</td> 
+<tr bgcolor="687592">  <td>18/10/15 12:47:35</td>   <td>7820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01006()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01006</td> 
   <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 11:47:03</td>   <td>11402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01007()[pri:0, instance:com.Home.Associate_Login@13deb50e]">TCBA01007</td> 
+<tr bgcolor="687592">  <td>18/10/15 12:47:39</td>   <td>11329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01007()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01007</td> 
   <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 11:47:13</td>   <td>21525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01008()[pri:0, instance:com.Home.Associate_Login@13deb50e]">TCBA01008</td> 
+<tr bgcolor="687592">  <td>18/10/15 12:47:49</td>   <td>21507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01008()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01008</td> 
   <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>18/10/15 11:46:40</td>   <td>-11215</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Login@13deb50e]">&gt;&gt;setup1</td> 
+<tr bgcolor="bd7b6a">  <td>18/10/15 12:47:16</td>   <td>-11165</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">&gt;&gt;setup1</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>18/10/15 11:47:17</td>   <td>25360</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Login@13deb50e]">&lt;&lt;tearDown</td> 
+<tr bgcolor="bd7b6a">  <td>18/10/15 12:47:52</td>   <td>25085</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@174573182</td>   <td></td> </tr>
 </table>
