--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,40 +31,28 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">7</td><td class="numi">7</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">33.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">8</td><td class="numi">8</td><td class="numi">0</td><td class="numi">0</td><td class="numi">32.4 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">com.associatePortal.Associate_Login</td><td><a href="#m1"><b>TCBA01007</b>  </a></td><td class="numi">1</td><td>1542086314488</td><td class="numi">9924</td></tr>
 <tr><th colspan="4">Test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="7">com.associatePortal.Associate_Login</td><td><a href="#m2"><b>TCBA01001</b>  </a></td><td class="numi">1</td><td>1542086303716</td><td class="numi">609</td></tr><tr class="passedodd"><td><a href="#m3"><b>TCBA01002</b>  </a></td><td class="numi">1</td><td>1542086304325</td><td class="numi">356</td></tr><tr class="passedodd"><td><a href="#m4"><b>TCBA01003</b>  </a></td><td class="numi">1</td><td>1542086304681</td><td class="numi">359</td></tr><tr class="passedodd"><td><a href="#m5"><b>TCBA01004</b>  </a></td><td class="numi">1</td><td>1542086305040</td><td class="numi">2406</td></tr><tr class="passedodd"><td><a href="#m6"><b>TCBA01005</b>  </a></td><td class="numi">1</td><td>1542086307446</td><td class="numi">3639</td></tr><tr class="passedodd"><td><a href="#m7"><b>TCBA01006</b>  </a></td><td class="numi">1</td><td>1542086311085</td><td class="numi">3403</td></tr><tr class="passedodd"><td><a href="#m8"><b>TCBA01008</b>  </a></td><td class="numi">1</td><td>1542086324427</td><td class="numi">4294</td></tr>
+<tr class="passedodd"><td rowspan="8">com.associatePortal.Associate_Login</td><td><a href="#m1"><b>TCBA01001</b>  </a></td><td class="numi">1</td><td>1543553265565</td><td class="numi">594</td></tr><tr class="passedodd"><td><a href="#m2"><b>TCBA01002</b>  </a></td><td class="numi">1</td><td>1543553266160</td><td class="numi">380</td></tr><tr class="passedodd"><td><a href="#m3"><b>TCBA01003</b>  </a></td><td class="numi">1</td><td>1543553266541</td><td class="numi">359</td></tr><tr class="passedodd"><td><a href="#m4"><b>TCBA01004</b>  </a></td><td class="numi">1</td><td>1543553266901</td><td class="numi">2409</td></tr><tr class="passedodd"><td><a href="#m5"><b>TCBA01005</b>  </a></td><td class="numi">1</td><td>1543553269311</td><td class="numi">3450</td></tr><tr class="passedodd"><td><a href="#m6"><b>TCBA01006</b>  </a></td><td class="numi">1</td><td>1543553272762</td><td class="numi">3425</td></tr><tr class="passedodd"><td><a href="#m7"><b>TCBA01007</b>  </a></td><td class="numi">1</td><td>1543553276189</td><td class="numi">10009</td></tr><tr class="passedodd"><td><a href="#m8"><b>TCBA01008</b>  </a></td><td class="numi">1</td><td>1543553286199</td><td class="numi">3617</td></tr>
 </table>
 <h1>Test</h1>
-<h2 id="m1">com.associatePortal.Associate_Login:TCBA01007</h2>
-<div style="padding-left:3em">
-<p>expected [You have been locked out. Please contact support.] but found [Invalid username or password.]</p>
-org.testng.Assert.fail(Assert.java:94)
-<br/>at org.testng.Assert.failNotEquals(Assert.java:494)
-<br/>at org.testng.Assert.assertEquals(Assert.java:123)
-<br/>at org.testng.Assert.assertEquals(Assert.java:176)
-<br/>at org.testng.Assert.assertEquals(Assert.java:186)
-<br/>at com.associatePortal.Associate_Login.TCBA01007(Associate_Login.java:221)
-<br/>25 lines not shown
-</div>
+<h2 id="m1">com.associatePortal.Associate_Login:TCBA01008</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.associatePortal.Associate_Login:TCBA01006</h2>
+<h2 id="m2">com.associatePortal.Associate_Login:TCBA01003</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">com.associatePortal.Associate_Login:TCBA01003</h2>
+<h2 id="m3">com.associatePortal.Associate_Login:TCBA01007</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">com.associatePortal.Associate_Login:TCBA01002</h2>
+<h2 id="m4">com.associatePortal.Associate_Login:TCBA01004</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m5">com.associatePortal.Associate_Login:TCBA01004</h2>
+<h2 id="m5">com.associatePortal.Associate_Login:TCBA01006</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m6">com.associatePortal.Associate_Login:TCBA01001</h2>
+<h2 id="m6">com.associatePortal.Associate_Login:TCBA01005</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m7">com.associatePortal.Associate_Login:TCBA01008</h2>
+<h2 id="m7">com.associatePortal.Associate_Login:TCBA01001</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m8">com.associatePortal.Associate_Login:TCBA01005</h2>
+<h2 id="m8">com.associatePortal.Associate_Login:TCBA01002</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
