--- a/test-output/index.html
+++ b/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-failed">Suite</span>
+              <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -90,21 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods, 1 failed,   7 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.associatePortal.Associate_Login" class="method navigator-link" hash-for-method="TCBA01007">TCBA01007</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Suite -->
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -145,6 +131,11 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.associatePortal.Associate_Login" class="method navigator-link" hash-for-method="TCBA01007">TCBA01007</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="com.associatePortal.Associate_Login" class="method navigator-link" hash-for-method="TCBA01008">TCBA01008</a> <!-- method navigator-link -->
                       </span>
                       <br/>
@@ -160,56 +151,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.associatePortal.Associate_Login</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="TCBA01007">
-                  </a> <!-- TCBA01007 -->
-                  <span class="method-name">TCBA01007</span>
-                  <div class="stack-trace"><b>"java.lang.AssertionError: expected [You have been locked out. Please contact support.] but found [Invalid username or password.]
-	at com.associatePortal.Associate_Login.TCBA01007(Associate_Login.java:221)
-... Removed 29 stack frames<br/> java.lang.AssertionError: expected [You have been locked out. Please contact support.] but found [Invalid username or password.]
-	at org.testng.Assert.fail(Assert.java:94)
-	at org.testng.Assert.failNotEquals(Assert.java:494)
-	at org.testng.Assert.assertEquals(Assert.java:123)
-	at org.testng.Assert.assertEquals(Assert.java:176)
-	at org.testng.Assert.assertEquals(Assert.java:186)
-	at com.associatePortal.Associate_Login.TCBA01007(Associate_Login.java:221)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:564)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:714)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:901)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1231)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)
-	at org.testng.TestRunner.privateRun(TestRunner.java:767)
-	at org.testng.TestRunner.run(TestRunner.java:617)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:334)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:240)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1198)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1123)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-"</b><br>org.testng.Assert.fail(Assert.java:94)<br>org.testng.Assert.failNotEquals(Assert.java:494)<br>org.testng.Assert.assertEquals(Assert.java:123)<br>org.testng.Assert.assertEquals(Assert.java:176)<br>org.testng.Assert.assertEquals(Assert.java:186)<br>com.associatePortal.Associate_Login.TCBA01007(Associate_Login.java:221)<br>java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br>java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)<br>java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)<br>java.base/java.lang.reflect.Method.invoke(Method.java:564)<br>org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)<br>org.testng.internal.Invoker.invokeMethod(Invoker.java:714)<br>org.testng.internal.Invoker.invokeTestMethod(Invoker.java:901)<br>org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1231)<br>org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)<br>org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)<br>org.testng.TestRunner.privateRun(TestRunner.java:767)<br>org.testng.TestRunner.run(TestRunner.java:617)<br>org.testng.SuiteRunner.runTest(SuiteRunner.java:334)<br>org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)<br>org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)<br>org.testng.SuiteRunner.run(SuiteRunner.java:240)<br>org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)<br>org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)<br>org.testng.TestNG.runSuitesSequentially(TestNG.java:1198)<br>org.testng.TestNG.runSuitesLocally(TestNG.java:1123)<br>org.testng.TestNG.run(TestNG.java:1031)<br>org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)<br>org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)<br>org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)<br>
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -256,6 +197,13 @@
                   <a name="TCBA01006">
                   </a> <!-- TCBA01006 -->
                   <span class="method-name">TCBA01006</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TCBA01007">
+                  </a> <!-- TCBA01007 -->
+                  <span class="method-name">TCBA01007</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -323,35 +271,35 @@ data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TCBA01007')
 data.setCell(0, 2, 'com.associatePortal.Associate_Login')
-data.setCell(0, 3, 9924);
+data.setCell(0, 3, 10009);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'TCBA01008')
 data.setCell(1, 2, 'com.associatePortal.Associate_Login')
-data.setCell(1, 3, 4294);
+data.setCell(1, 3, 3617);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'TCBA01005')
 data.setCell(2, 2, 'com.associatePortal.Associate_Login')
-data.setCell(2, 3, 3639);
+data.setCell(2, 3, 3450);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'TCBA01006')
 data.setCell(3, 2, 'com.associatePortal.Associate_Login')
-data.setCell(3, 3, 3403);
+data.setCell(3, 3, 3425);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'TCBA01004')
 data.setCell(4, 2, 'com.associatePortal.Associate_Login')
-data.setCell(4, 3, 2406);
+data.setCell(4, 3, 2409);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'TCBA01001')
 data.setCell(5, 2, 'com.associatePortal.Associate_Login')
-data.setCell(5, 3, 609);
+data.setCell(5, 3, 594);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'TCBA01003')
+data.setCell(6, 1, 'TCBA01002')
 data.setCell(6, 2, 'com.associatePortal.Associate_Login')
-data.setCell(6, 3, 359);
+data.setCell(6, 3, 380);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'TCBA01002')
+data.setCell(7, 1, 'TCBA01003')
 data.setCell(7, 2, 'com.associatePortal.Associate_Login')
-data.setCell(7, 3, 356);
+data.setCell(7, 3, 359);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -389,41 +337,39 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">TCBA01001</span>
-                <span class="method-start">7965 ms</span>
+                <span class="method-start">8098 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TCBA01002</span>
-                <span class="method-start">8574 ms</span>
+                <span class="method-start">8693 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TCBA01003</span>
-                <span class="method-start">8930 ms</span>
+                <span class="method-start">9074 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TCBA01004</span>
-                <span class="method-start">9289 ms</span>
+                <span class="method-start">9434 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TCBA01005</span>
-                <span class="method-start">11695 ms</span>
+                <span class="method-start">11844 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TCBA01006</span>
-                <span class="method-start">15334 ms</span>
+                <span class="method-start">15295 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">TCBA01007</span>
-                <span class="method-start">18737 ms</span>
+                <span class="method-start">18722 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TCBA01008</span>
-                <span class="method-start">28676 ms</span>
+                <span class="method-start">28732 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">32970 ms</span>
+                <span class="method-start">32352 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
